--- a/package.json
+++ b/package.json
@@ -19,10 +19,13 @@
   "homepage": "https://github.com/zymokey/mission-park#readme",
   "dependencies": {
     "express": "^4.14.0",
+    "jsonwebtoken": "^7.2.1",
+    "jwt-decode": "^2.1.0",
     "material-ui": "^0.16.6",
     "mongoose": "^4.7.7",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
+    "react-redux": "^5.0.2",
     "react-router": "^3.0.1",
     "react-tap-event-plugin": "^2.0.1",
     "redux": "^3.6.0",
