--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "body-parser": "^1.16.0",
     "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.3",
+    "es6-promise": "^4.0.5",
     "express": "^4.14.0",
     "express-session": "^1.14.2",
+    "isomorphic-fetch": "^2.2.1",
     "jsonwebtoken": "^7.2.1",
     "jwt-decode": "^2.1.0",
     "material-ui": "^0.16.6",
@@ -38,7 +40,8 @@
     "react-tap-event-plugin": "^2.0.1",
     "redux": "^3.6.0",
     "redux-thunk": "^2.1.0",
-    "validator": "^6.2.1"
+    "validator": "^6.2.1",
+    "whatwg-fetch": "^2.0.2"
   },
   "devDependencies": {
     "babel-core": "^6.21.0",
