--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-tap-event-plugin": "^2.0.1",
     "redux": "^3.6.0",
     "redux-thunk": "^2.1.0",
+    "socket.io": "^1.7.3",
     "validator": "^6.2.1",
     "whatwg-fetch": "^2.0.2"
   },
