--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "bcrypt": "^1.0.2",
     "body-parser": "^1.16.0",
     "connect-flash": "^0.1.1",
+    "connect-redis": "^3.2.0",
     "cookie-parser": "^1.4.3",
     "eonasdan-bootstrap-datetimepicker": "^4.17.46",
     "es6-promise": "^4.0.5",
