--- a/package.json
+++ b/package.json
@@ -28,7 +28,6 @@
     "es6-promise": "^4.0.5",
     "express": "^4.14.0",
     "express-session": "^1.14.2",
-    "isomorphic-fetch": "^2.2.1",
     "jsonwebtoken": "^7.2.1",
     "jwt-decode": "^2.1.0",
     "mongoose": "^4.7.7",
@@ -36,17 +35,13 @@
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
     "react": "^15.4.2",
-    "react-autosuggest": "^9.0.0",
-    "react-bootstrap": "^0.30.7",
     "react-dom": "^15.4.2",
     "react-redux": "^5.0.2",
     "react-router": "^3.0.1",
-    "react-tap-event-plugin": "^2.0.1",
     "redux": "^3.6.0",
     "redux-thunk": "^2.1.0",
     "socket.io": "^1.7.3",
-    "validator": "^6.2.1",
-    "whatwg-fetch": "^2.0.2"
+    "validator": "^6.2.1"
   },
   "devDependencies": {
     "babel-core": "^6.21.0",
