--- a/package.json
+++ b/package.json
@@ -46,15 +46,15 @@
     "validator": "^6.2.1"
   },
   "devDependencies": {
-    "babel-core": "^6.21.0",
-    "babel-loader": "^6.2.10",
-    "babel-preset-es2015": "^6.18.0",
-    "babel-preset-react": "^6.16.0",
+    "babel-core": "^6.25.0",
+    "babel-loader": "^6.4.1",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
     "css-loader": "^0.26.1",
     "nodemon": "^1.11.0",
-    "react-hot-loader": "^1.3.1",
+    "react-addons-perf": "^15.4.2",
     "style-loader": "^0.13.1",
-    "webpack": "^1.14.0",
-    "webpack-dev-server": "^1.16.2"
+    "uglifyjs-webpack-plugin": "^0.4.6",
+    "webpack": "^3.3.0"
   }
 }
